# opencxx

./: AUTHORS  COPYING  ChangeLog  FILES  INSTALL  Makefile.am  Makefile.in  MetaclassPreregistration.cc  README  TIPS  TODO  acinclude.m4  aclocal.m4  bootstrap  config.h.in  configure  configure.in  empty_libocc.cc  mop.h  occ2.in  opencxx.pc  opencxx.pc.in
buildinfo/: Makefile.am  Makefile.in  compiler-name.sh  libgc-version.cc
doc/: ref-appendix.html
examples/: Makefile.am  Makefile.global  Makefile.global.in  Makefile.in  Readme
examples/before/: BeforeClass.mc  Makefile.am  Makefile.in  Makefile.local  before-test.cc
examples/matrix/: Makefile.am  Makefile.in  Makefile.local  MatrixClass.mc  matrix-test.cc  matrix.cc  matrix.h
examples/runtime-mop/: Makefile.am  Makefile.in  Makefile.local  RtmopClass.h  RtmopClass.mc  metaobj-test.cc  metaobj.cc  metaobj.h
examples/verbose/: Makefile.am  Makefile.in  Makefile.local  VerboseClass.mc  person.cc
examples/verbose2/: Makefile.am  Makefile.in  Makefile.local  VerboseClass2.mc  person2.cc
examples/wrapper/: Makefile.am  Makefile.in  Makefile.local  SyncClass.mc  WrapperClass.cc  WrapperClass.h  sync-test.cc
html/: Makefile.am  Makefile.in  class.html  man.html  overview.html  ptree.html
libltdl/: aclocal.m4  configure
opencxx/: Bind.cc  Bind.h  BindClassName.cc  BindClassName.h  BindEnumName.cc  BindEnumName.h  BindTemplateClass.cc  BindTemplateClass.h  BindTemplateFunction.cc  BindTemplateFunction.h  BindTypedefName.cc  BindTypedefName.h  BindVarName.cc  BindVarName.h  ChangedMemberList.cc  ChangedMemberList.h  Class.cc  Class.h  ClassArray.cc  ClassArray.h  ClassBodyWalker.cc  ClassBodyWalker.h  ClassWalker.cc  ClassWalker.h  CliErrorMsg.h  DynamicMopMetaclassLoader.h  EncodingUtil.cc  EncodingUtil.h  Environment.cc  Environment.h  GenericMsg.h  InfoMsg.h  Makefile.am  Makefile.in  Member.cc  Member.h  MemberFunction.cc  MemberFunction.h  MemberList.cc  MemberList.h  (+39 more)
opencxx/parser/: AbstractTranslatingWalker.h  AbstractTypingWalker.h  BigHashTable.cc  BigHashTable.h  CerrErrorLog.cc  CerrErrorLog.h  DupLeaf.cc  DupLeaf.h  Encoding.cc  Encoding.h  ErrorLog.h  GC-disabled.h  GC-enabled.h  GC.h  GC.h.in  HashTable.cc  HashTable.h  Leaf.cc  Leaf.h  LeafName.cc  LeafName.h  LeafReserved.h  LeafThis.cc  LeafThis.h  Lex.cc  Lex.h  MetaclassLoader.h  MopMsg.h  Msg.h  NonLeaf.cc  NonLeaf.h  NullMetaclassLoader.h  ParseErrorMsg.h  Parser.cc  Parser.h  Program.cc  Program.h  ProgramFile.cc  ProgramFile.h  ProgramFromStdin.cc  (+71 more)
scripts/: Makefile.am  Makefile.in  README  libocc-config.in
testsuite/: Makefile.am  Makefile.in  occ2-test.in  tester2.in
testsuite/comp/: HOWTO-add-comp-test.txt  tnested-class.gold  tnested-class.mc  tnested-test.cc  tstart-class.gold  tstart-class.mc  tstart-test.cc  typeidt-class.gold  typeidt-class.mc  typeidt-test.cc  typeidv-class.gold  typeidv-class.mc  typeidv-test.cc
testsuite/exec/: HOWTO-add-exec-test.txt  before-class.mc  before-test.cc  before-test.gold  parse1-class.mc  parse1-test.cc  parse1-test.gold  verbose-class.mc  verbose-test.cc  verbose-test.gold  verbose2-class.mc  verbose2-test.cc  verbose2-test.gold
tools/: addguards.in
